Adição de resource RestApi e modificação de Readme com tutorial de instalação

--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,7 @@
         <script src="scripts/controllers/charts.js"></script>
         <script src="scripts/controllers/map.js"></script>
         <script src="scripts/directives/map.js"></script>
+        <script src="scripts/services/restapi.js"></script>
         <!-- endbuild -->
 </body>
 </html>
