--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
   </head>
   <body ng-app="estatisticasApp">
     <!--[if lt IE 7]>
@@ -27,7 +28,7 @@
     <div ng-view=""></div>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
 
-<!-- 
+    <!-- 
     <script>
        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -37,8 +38,8 @@
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
     </script>
-
--->
+    -->
+    
     <!-- build:js(.) scripts/oldieshim.js -->
     <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
@@ -70,6 +71,7 @@
         <script src="scripts/controllers/map.js"></script>
         <script src="scripts/directives/map.js"></script>
         <script src="scripts/services/restapi.js"></script>
+        <script src="scripts/directives/cloud.js"></script>
         <!-- endbuild -->
 </body>
 </html>
