--- a/app/index.html
+++ b/app/index.html
@@ -74,6 +74,7 @@
         <script src="scripts/directives/map.js"></script>
         <script src="scripts/services/restapi.js"></script>
         <script src="scripts/directives/cloud.js"></script>
+        <script src="scripts/directives/mensal.js"></script>
         <!-- endbuild -->
 </body>
 </html>
