Adicionadas diretivas para visualizacao dos dados da Tabela PRODES com manipulacao dos mesmos para apresentação em graficos

--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,8 @@
         <script src="scripts/services/restapi.js"></script>
         <script src="scripts/directives/cloud.js"></script>
         <script src="scripts/directives/mensal.js"></script>
+        <script src="scripts/directives/prodes.js"></script>
+        <script src="scripts/directives/prodesuf.js"></script>
         <!-- endbuild -->
 </body>
 </html>
