Added chart for info/uf

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,6 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
@@ -77,6 +76,7 @@
         <script src="scripts/directives/mensal.js"></script>
         <script src="scripts/directives/prodes.js"></script>
         <script src="scripts/directives/prodesuf.js"></script>
+        <script src="scripts/directives/deterufs.js"></script>
         <!-- endbuild -->
 </body>
 </html>
