adding graph 3 functional

--- a/app/index.html
+++ b/app/index.html
@@ -49,9 +49,10 @@
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/Chart.js/Chart.js"></script>
+    <script src="bower_components/Chart.StackedBar.js/src/Chart.StackedBar.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
-    <script src="bower_components/Chart.js/Chart.js"></script>
     <script src="bower_components/angular-chart.js/dist/angular-chart.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
@@ -82,6 +83,7 @@
         <script src="scripts/directives/barchart.js"></script>
         <script src="scripts/directives/piechart.js"></script>
         <script src="scripts/directives/spinner.js"></script>
+        <script src="scripts/directives/stackedbarchart.js"></script>
         <!-- endbuild -->
 </body>
 </html>
