adding graphs 8 and 9 and rearranging code for easing new series to be requested for each graph

--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,7 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="bower_components/leaflet/dist/leaflet-src.js"></script>
     <script src="bower_components/spin.js/spin.js"></script>
+    <script src="bower_components/numeral/numeral.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
