--- a/app/index.html
+++ b/app/index.html
@@ -85,6 +85,8 @@
         <script src="scripts/directives/piechart.js"></script>
         <script src="scripts/directives/spinner.js"></script>
         <script src="scripts/directives/stackedbarchart.js"></script>
+        <script src="scripts/directives/tablechart.js"></script>
+        <script src="scripts/services/restfunctions.js"></script>
         <!-- endbuild -->
 </body>
 </html>
