--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,7 @@
     <script src="bower_components/leaflet/dist/leaflet-src.js"></script>
     <script src="bower_components/spin.js/spin.js"></script>
     <script src="bower_components/numeral/numeral.js"></script>
+    <script src="bower_components/ng-csv/build/ng-csv.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -87,6 +88,7 @@
         <script src="scripts/directives/stackedbarchart.js"></script>
         <script src="scripts/directives/tablechart.js"></script>
         <script src="scripts/services/restfunctions.js"></script>
+        <script src="scripts/directives/login.js"></script>
         <!-- endbuild -->
 </body>
 </html>
