--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html class="no-js">
   <head>
+    <meta property="creator.productor" content="http://estruturaorganizacional.dados.gov.br/id/unidade-organizacional/NUMERO"> 
     <meta charset="utf-8">
     <title></title>
     <meta name="description" content="">
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="bower_components/angular-chart.js/dist/angular-chart.css" />
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/leaflet/dist/leaflet.css" />
+    <link rel="stylesheet" href="bower_components/c3/c3.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -17,6 +19,13 @@
     <!-- endbuild -->
   </head>
   <body ng-app="estatisticasApp">
+  <!-- Barra Governo -->
+    <div id="barra-brasil" style="background:#7F7F7F; height: 20px; padding:0 0 0 10px;display:block;"> 
+      <ul id="menu-barra-temp" style="list-style:none;">
+        <li style="display:inline; float:left;padding-right:10px; margin-right:10px; border-right:1px solid #EDEDED"><a href="http://brasil.gov.br" style="font-family:sans,sans-serif; text-decoration:none; color:white;">Portal do Governo Brasileiro</a></li> 
+        <li><a style="font-family:sans,sans-serif; text-decoration:none; color:white;" href="http://epwg.governoeletronico.gov.br/barra/atualize.html">Atualize sua Barra de Governo</a></li>
+      </ul>
+    </div>
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -64,6 +73,8 @@
     <script src="bower_components/spin.js/spin.js"></script>
     <script src="bower_components/numeral/numeral.js"></script>
     <script src="bower_components/ng-csv/build/ng-csv.min.js"></script>
+    <script src="bower_components/d3/d3.js"></script>
+    <script src="bower_components/c3/c3.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -89,6 +100,9 @@
         <script src="scripts/directives/tablechart.js"></script>
         <script src="scripts/services/restfunctions.js"></script>
         <script src="scripts/directives/login.js"></script>
+        <script src="scripts/directives/gaugepanel.js"></script>
         <!-- endbuild -->
+        <!-- Barra Governo -->
+        <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
 </body>
 </html>
