--- a/app/index.html
+++ b/app/index.html
@@ -12,9 +12,11 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/leaflet/dist/leaflet.css" />
     <link rel="stylesheet" href="bower_components/c3/c3.css" />
+    <link rel="stylesheet" href="bower_components/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
+    <link rel="stylesheet" href="bower_components/leaflet-switchcontrol/dist/leaflet.switchcontrol.min.css"></link>
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
@@ -75,6 +77,7 @@
     <script src="bower_components/ng-csv/build/ng-csv.min.js"></script>
     <script src="bower_components/d3/d3.js"></script>
     <script src="bower_components/c3/c3.js"></script>
+    <script src="bower_components/bootstrap-switch/dist/js/bootstrap-switch.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -99,5 +102,6 @@
         <!-- endbuild -->
         <!-- Barra Governo -->
         <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
+        <script src="bower_components/leaflet-switchcontrol/dist/leaflet.switchcontrol.min.js" type="text/javascript"></script>
 </body>
 </html>
