--- a/app/index.html
+++ b/app/index.html
@@ -13,10 +13,10 @@
     <link rel="stylesheet" href="bower_components/leaflet/dist/leaflet.css" />
     <link rel="stylesheet" href="bower_components/c3/c3.css" />
     <link rel="stylesheet" href="bower_components/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css" />
+    <link rel="stylesheet" href="bower_components/leaflet-switchcontrol/dist/leaflet.switchcontrol.min.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="bower_components/leaflet-switchcontrol/dist/leaflet.switchcontrol.min.css"></link>
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
@@ -78,6 +78,7 @@
     <script src="bower_components/d3/d3.js"></script>
     <script src="bower_components/c3/c3.js"></script>
     <script src="bower_components/bootstrap-switch/dist/js/bootstrap-switch.js"></script>
+    <script src="bower_components/leaflet-switchcontrol/dist/leaflet.switchcontrol.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -102,6 +103,5 @@
         <!-- endbuild -->
         <!-- Barra Governo -->
         <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
-        <script src="bower_components/leaflet-switchcontrol/dist/leaflet.switchcontrol.min.js" type="text/javascript"></script>
 </body>
 </html>
