--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="bower_components/c3/c3.css" />
     <link rel="stylesheet" href="bower_components/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css" />
     <link rel="stylesheet" href="bower_components/leaflet-switchcontrol/dist/leaflet.switchcontrol.min.css" />
+    <link rel="stylesheet" href="bower_components/leaflet.markercluster/dist/MarkerCluster.css" />
+    <link rel="stylesheet" href="bower_components/leaflet.markercluster/dist/MarkerCluster.Default.css" />
+    <link rel="stylesheet" href="bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker3.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -79,7 +82,10 @@
     <script src="bower_components/c3/c3.js"></script>
     <script src="bower_components/bootstrap-switch/dist/js/bootstrap-switch.js"></script>
     <script src="bower_components/leaflet-switchcontrol/dist/leaflet.switchcontrol.min.js"></script>
+    <script src="bower_components/leaflet.markercluster/dist/leaflet.markercluster-src.js"></script>
+    <script src="bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
     <!-- endbower -->
+    <script src="bower_components/bootstrap-datepicker/js/locales/bootstrap-datepicker.pt-BR.js"></script>
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -100,6 +106,8 @@
         <script src="scripts/services/restfunctions.js"></script>
         <script src="scripts/directives/login.js"></script>
         <script src="scripts/directives/gaugepanel.js"></script>
+        <script src="scripts/controllers/cruzamentos.js"></script>
+        <script src="scripts/directives/calendar.js"></script>
         <!-- endbuild -->
         <!-- Barra Governo -->
         <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
