--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,7 @@
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/Chart.js/Chart.js"></script>
+    <script src="bower_components/Chart.js/Chart.min.js"></script>
     <script src="bower_components/Chart.StackedBar.js/src/Chart.StackedBar.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
@@ -84,6 +84,26 @@
     <script src="bower_components/leaflet-switchcontrol/dist/leaflet.switchcontrol.min.js"></script>
     <script src="bower_components/leaflet.markercluster/dist/leaflet.markercluster-src.js"></script>
     <script src="bower_components/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
+    <script src="bower_components/leaflet-plugins/control/Distance.js"></script>
+    <script src="bower_components/leaflet-plugins/control/Layers.Load.js"></script>
+    <script src="bower_components/leaflet-plugins/control/Permalink.js"></script>
+    <script src="bower_components/leaflet-plugins/control/Permalink.Layer.js"></script>
+    <script src="bower_components/leaflet-plugins/control/Permalink.Line.js"></script>
+    <script src="bower_components/leaflet-plugins/control/Permalink.Marker.js"></script>
+    <script src="bower_components/leaflet-plugins/control/Permalink.Overlay.js"></script>
+    <script src="bower_components/leaflet-plugins/layer/Icon.Canvas.js"></script>
+    <script src="bower_components/leaflet-plugins/layer/Layer.Deferred.js"></script>
+    <script src="bower_components/leaflet-plugins/layer/Marker.Rotate.js"></script>
+    <script src="bower_components/leaflet-plugins/layer/Marker.Text.js"></script>
+    <script src="bower_components/leaflet-plugins/layer/OpenStreetBugs.js"></script>
+    <script src="bower_components/leaflet-plugins/layer/vector/GPX.js"></script>
+    <script src="bower_components/leaflet-plugins/layer/vector/GPX.Speed.js"></script>
+    <script src="bower_components/leaflet-plugins/layer/vector/KML.js"></script>
+    <script src="bower_components/leaflet-plugins/layer/vector/OSM.js"></script>
+    <script src="bower_components/leaflet-plugins/layer/vector/TOPOJSON.js"></script>
+    <script src="bower_components/leaflet-plugins/layer/tile/Bing.js"></script>
+    <script src="bower_components/leaflet-plugins/layer/tile/Yandex.js"></script>
+    <script src="bower_components/leaflet-multilayer-feature-getter/dist/Leaflet.MultilayerFeatureGetter.min.js"></script>
     <!-- endbower -->
     <script src="bower_components/bootstrap-datepicker/js/locales/bootstrap-datepicker.pt-BR.js"></script>
     <!-- endbuild -->
